--- a/application/admin/view/shop/modifys.html
+++ b/application/admin/view/shop/modifys.html
@@ -106,13 +106,23 @@
                             </div>
 
 
-                          <div class="form-group">
+                            <div class="form-group">
                               <label class="col-sm-2 control-label no-padding-right" for="">地址</label>
                               <div class="col-sm-10">
-                                <input class="form-control" type="text" name="addr" value="{$re.addr}" placeholder="请输入地址" >
+                                <input class="form-control" type="text" name="addr" value="{$re.addr}" id="addr" required >
                               </div>
-                              
                             </div>
+  
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label no-padding-right" for="">经度</label>
+                                <div class="col-sm-4">
+                                  <input class="form-control" type="text" name="longs" value="{$re.longs}" id="longs" required>
+                                </div>
+                                <label class="col-sm-2 control-label no-padding-right" for="">纬度</label>
+                                <div class="col-sm-4">
+                                  <input class="form-control" type="text" name="lats" value="{$re.lats}" id="lats" required>
+                                </div>
+                              </div>
 
                             <div class="form-group">
                               <label class="col-sm-2 control-label no-padding-right" for="">营业时间</label>
@@ -275,6 +285,29 @@
           
           $('#cid').html('<option value="0">请选择分类</option>');
         } 
+      
+          
+       }
+    })
+
+ })
+ $("#addr").change(function(){
+   var addr = $("#addr").val();
+ 
+   
+    $.ajax({
+       type:"post",
+       url:"{:url('Shop/query_address')}",
+       data:{addr:addr},
+       datatype:"text",
+       success:function(re)
+       {
+         if(re == 0){
+           layer.msg("自动定位失败请手动输入经纬度")
+         }else{
+            $("#longs").val(re.lng);
+            $("#lats").val(re.lat);
+         }
       
           
        }
