--- a/application/other/view/goods/add.html
+++ b/application/other/view/goods/add.html
@@ -22,7 +22,7 @@
             <i class="ace-icon fa fa-home home-icon"></i>
             <a href="{:url('Index/index')}">首页</a>
           </li>
-          <li class="active">添加商家</li>
+          <li class="active">添加商品</li>
         </ul><!-- /.breadcrumb -->
 
       </div>
@@ -34,135 +34,93 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="col-sm-10 col-sm-offset-1">
-              <form id="logoForm" class="form-horizontal" action="{:url('Shop/save')}" method="post" enctype="multipart/form-data">
+              <form id="logoForm" class="form-horizontal" action="{:url('Goods/save')}" method="post" enctype="multipart/form-data">
                 <div class="row">
                   <div class="col-sm-7">
                     <div class="widget-box transparent">
                       <div class="widget-header widget-header-flat">
-                        <h4 class="widget-title"><i class="ace-icon fa fa-leaf green"></i>商家信息</h4>
+                        <h4 class="widget-title"><i class="ace-icon fa fa-leaf green"></i>商品信息</h4>
                       </div>
                       <div class="widget-body">
                         <div class="widget-main">
-
-                            <div class="form-group">
-                                <label class="col-sm-2 control-label no-padding-right" for="">一级分类</label>
-                                    <div class="col-sm-10">
-                                      <select class="form-control" name="fid"  id="sid" required>
-                                          <option value="">请选择分类</option>
-                                        {volist name="res" id="v"}
-                                        <option value="{$v.id}">{$v.name}</option>
-                                       {/volist}
-                                      </select>
-                                    </div> 
-        
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label no-padding-right" for="">二级分类</label>
-                                        <div class="col-sm-10">
-                                          <select class="form-control" name="tid" id="cid" >
-                                            <option value="0">请选择分类</option>
-                                            
-                                          </select>
-                                        </div> 
-            
-                                    </div>
-                    
-                          <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right" for="">商家名称</label>
+                        <div class="form-group">
+                        <label class="col-sm-2 control-label no-padding-right" for="">所属分类</label>
                             <div class="col-sm-10">
-                              <input class="form-control" type="text" name="name" required placeholder="请输入商家名称" >
-                            </div>
-                            
-                          </div>
-
+                              <select class="form-control" name="fid" required>
+                               {volist name="res" id="v"}
+                                <option value="{$v.type_id}">{$v.type_name}</option>
+                               {/volist}
+                              </select>
+                            </div> 
+                        </div>
                           <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right" for="">主要经营</label>
+                            <label class="col-sm-2 control-label no-padding-right" for="">商品名称</label>
                             <div class="col-sm-10">
-                              <input class="form-control" type="text" name="manage" required placeholder="请输入主要经营" >
+                              <input class="form-control" type="text" name="g_name" required placeholder="请输入商品名称" >
                             </div>
                             
                           </div>
                                                                            
                           <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right" for="">评分</label>
+                            <label class="col-sm-2 control-label no-padding-right" for="">商品价格</label>
                             <div class="col-sm-10">
-                              <input class="form-control" type="number" max="5" name="score" placeholder="请输入评分">
+                              <input class="form-control" type="text" name="g_xprice" placeholder="请输入商品价格" required>
                             </div>
                           </div>
-                         
+                          <div class="form-group">
+                            <label class="col-sm-2 control-label no-padding-right" for="">商品描述</label>
+                            <div class="col-sm-10">
+                              <input class="form-control" type="text" name="desc" placeholder="请输入商品描述" >
+                            </div>
+                          </div>
+                           <div class="form-group">
+                            <label class="col-sm-2 control-label no-padding-right" for="">商品标签</label>
+                            <div class="col-sm-10">
+                              <input class="form-control" type="text" name="tag" placeholder="请输入商品标签，多个请使用@隔开" >
+                            </div>
+                          </div>
                        
-
-                            <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">分享量</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="number" name="share" placeholder="请输入分享量">
-                            </div>
-                              <label class="col-sm-2 control-label no-padding-right" for="">浏览量</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="number" name="browse" placeholder="请输入浏览量">
-                            </div>
-                            </div>
-
+                
 
                           <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">地址</label>
-                              <div class="col-sm-10">
-                                <input class="form-control" type="text" name="addr" id="addr" placeholder="请输入地址" >
-                              </div>
-                              
+                            <label class="col-sm-2 control-label no-padding-right" for="">排序</label>
+                            <div class="col-sm-2">
+                              <input class="input-small" name="g_sort" type="number" value="50" placeholder="数字越小越靠前" >
                             </div>
-
-                            <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">经度</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="number" name="longs" id="longs" placeholder="请输入经度">
-                            </div>
-                              <label class="col-sm-2 control-label no-padding-right" for="">纬度</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="number" name="lats" id="lats" placeholder="请输入纬度">
-                            </div>
-                            </div>
-
-                            <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">营业时间</label>
-                              <div class="col-sm-10">
-                                <input class="form-control" type="text" name="time" placeholder="请输入营业时间" >
-                              </div>
-                              
-                            </div>
-
-                            <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">手机号码</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="number" name="phone" placeholder="用于商户后台登录账号" required>
-                            </div>
-                              <label class="col-sm-2 control-label no-padding-right" for="">登录密码</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="text" name="pwd" value="123456" required>
-                            </div>
-                            </div>
-                          
-
-                          <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">基础设施</label>
-                              <div class="col-sm-10">
-                               {volist name="sever" id="vs"}
-                               <div  class="col-sm-3">
-                               <div class="checkbox">
-                                  <label>
-                                    <input  class="ace ace-checkbox-2" type="checkbox" name="severs[]" value="{$vs.id}">
-                                    <span class="lbl"> {$vs.sever_name}</span>
-                                  </label>
-                                </div>
-                              </div>
-                               
-                             {/volist}
-                              </div>
                             
+                             <label class="col-sm-2 control-label no-padding-right" for="">库存</label>
+                            <div class="col-sm-2">
+                              <input class="input-small" name="g_kc" type="text" placeholder="商品库存" >
                             </div>
 
-                      
-                     
+                           <label class="col-sm-2 control-label no-padding-right" for="">销量</label>
+                            <div class="col-sm-2">
+                              <input class="input-small" name="g_sales" type="text" placeholder="商品销量" >
+                            </div>
+                          </div>
+                          <div class="form-group">
+
+                              <label class="col-sm-2 control-label no-padding-right" for="">运费</label>
+                              <div class="col-sm-2">
+                                <input class="input-small" name="g_freight" type="text" placeholder="商品运费" >
+                              </div>
+                          
+                            <label class="col-sm-2 control-label no-padding-right" for="">首页推荐</label>
+                            <div class="col-sm-2">
+                              <label style="padding-top: 8px">
+                                <input name="g_status" class="ace ace-switch ace-switch-6" type="checkbox" checked/>
+                                <span class="lbl"></span>
+                              </label>
+                            </div>
+                            
+                            <label class="col-sm-2 control-label no-padding-right" for="">上下架</label>
+                            <div class="col-sm-2">
+                              <label style="padding-top: 8px">
+                                <input name="g_up" class="ace ace-switch ace-switch-6" type="checkbox" checked/>
+                                <span class="lbl"></span>
+                              </label>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -177,15 +135,9 @@
                         <div class="widget-main">
                           <div class="form-group">
                             <div class="col-xs-12">
-                              <input multiple="" type="file" id="thumb" name="logo" />
+                              <input multiple="" type="file" id="thumb" name="g_image"/>
                             </div>
                           </div>
-
-                          <div class="form-group">
-                              <div class="col-xs-12">
-                                <input multiple="" type="file" id="thumbs" name="wx" />
-                              </div>
-                            </div>
                    
                         </div>
                       </div>
@@ -201,10 +153,10 @@
                 <div class="row">
                 
                   <div class="col-sm-12">
-                简介   
+                商品详情   
                 <script src="__ADMIN__/assets/js/ueditor.config.js" type="text/javascript"></script>
                 <script src="__ADMIN__/assets/js/ueditor.all.js" type="text/javascript"></script>
-                    <textarea id="myEditor" name="content" style="width:100%;"></textarea>
+                    <textarea id="myEditor" name="g_content" style="width:100%;"></textarea>
                     <script type="text/javascript">
                       var editor = new UE.ui.Editor({
                         initialFrameHeight: 300
@@ -212,13 +164,9 @@
                       editor.render("myEditor");
                     </script>
                   </div>
-
-                 
-
                 </div>
                 <div class="clearfix form-actions">
                   <div class="col-md-offset-3 col-md-9">
-                   
                     <button class="btn btn-info" type="submit">
                       <i class="ace-icon fa fa-floppy-o bigger-110"></i>
                       保存
@@ -259,70 +207,14 @@
     });
 
   })
-
-  $("#sid").change(function(){
-   var sid = $("#sid").val();
- 
-   
-    $.ajax({
-       type:"post",
-       url:"{:url('Shop/getnexts')}",
-       data:{sid:sid},
-       datatype:"text",
-       success:function(re)
-       {
-        if(re != 0){
-            var data = JSON.parse(re);
-            $('#cid').html('<option value="0">请选择分类</option>');
-            for(var j=0;j<data.length;j++){
-             
-              $('#cid').append('<option value="'+ data[j].id +'">'+data[j].name+'</option>');
-            }
-        }else{
-          
-          $('#cid').html('<option value="0">请选择分类</option>');
-        } 
-      
-          
-       }
-    })
-
- })
-
- $("#addr").change(function(){
-   var addr = $("#addr").val();
- 
-   
-    $.ajax({
-       type:"post",
-       url:"{:url('Shop/query_address')}",
-       data:{addr:addr},
-       datatype:"text",
-       success:function(re)
-       {
-         if(re == 0){
-           layer.msg("自动定位失败请手动输入经纬度")
-         }else{
-            $("#longs").val(re.lng);
-            $("#lats").val(re.lat);
-         }
-      
-          
-       }
-    })
-
- })
-
 </script>
-
-
 
 
   <script>
     $(function () {
       $('#thumb').ace_file_input({
         style: 'well',
-        btn_choose: 'logo',
+        btn_choose: '封面图',
         btn_change: null,
         no_icon: 'ace-icon fa fa-picture-o',
         droppable: true,
@@ -353,7 +245,7 @@
       
       $('#thumbs').ace_file_input({
           style: 'well',
-          btn_choose: '微信二维码',
+          btn_choose: '首页推荐图',
           btn_change: null,
           no_icon: 'ace-icon fa fa-picture-o',
           droppable: true,
