--- a/application/other/view/shop/modifys.html
+++ b/application/other/view/shop/modifys.html
@@ -22,7 +22,7 @@
             <i class="ace-icon fa fa-home home-icon"></i>
             <a href="{:url('Index/index')}">首页</a>
           </li>
-          <li class="active">添加商家</li>
+          <li class="active">修改信息</li>
         </ul><!-- /.breadcrumb -->
 
       </div>
@@ -34,7 +34,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="col-sm-10 col-sm-offset-1">
-              <form id="logoForm" class="form-horizontal" action="{:url('Shop/save')}" method="post" enctype="multipart/form-data">
+              <form id="logoForm" class="form-horizontal" action="{:url('Shop/usave')}" method="post" enctype="multipart/form-data">
                 <div class="row">
                   <div class="col-sm-7">
                     <div class="widget-box transparent">
@@ -50,7 +50,7 @@
                                       <select class="form-control" name="fid"  id="sid" required>
                                           <option value="">请选择分类</option>
                                         {volist name="res" id="v"}
-                                        <option value="{$v.id}">{$v.name}</option>
+                                        <option {if condition="$re.fid eq $v.id"}selected{/if} value="{$v.id}">{$v.name}</option>
                                        {/volist}
                                       </select>
                                     </div> 
@@ -61,7 +61,9 @@
                                         <div class="col-sm-10">
                                           <select class="form-control" name="tid" id="cid" >
                                             <option value="0">请选择分类</option>
-                                            
+                                            {volist name="city" id="v"}
+                                            <option value="{$v.id}" {if condition="$re.tid eq $v.id"} selected {/if} >{$v.name}</option>
+                                           {/volist}
                                           </select>
                                         </div> 
             
@@ -70,7 +72,7 @@
                           <div class="form-group">
                             <label class="col-sm-2 control-label no-padding-right" for="">商家名称</label>
                             <div class="col-sm-10">
-                              <input class="form-control" type="text" name="name" required placeholder="请输入商家名称" >
+                              <input class="form-control" type="text" name="name" value="{$re.name}" required placeholder="请输入商家名称" >
                             </div>
                             
                           </div>
@@ -78,7 +80,7 @@
                           <div class="form-group">
                             <label class="col-sm-2 control-label no-padding-right" for="">主要经营</label>
                             <div class="col-sm-10">
-                              <input class="form-control" type="text" name="manage" required placeholder="请输入主要经营" >
+                              <input class="form-control" type="text" name="manage" value="{$re.manage}" required placeholder="请输入主要经营" >
                             </div>
                             
                           </div>
@@ -86,7 +88,7 @@
                           <div class="form-group">
                             <label class="col-sm-2 control-label no-padding-right" for="">评分</label>
                             <div class="col-sm-10">
-                              <input class="form-control" type="number" max="5" name="score" placeholder="请输入评分">
+                              <input class="form-control" type="number" max="5" value="{$re.score}" name="score" placeholder="请输入评分">
                             </div>
                           </div>
                          
@@ -95,38 +97,37 @@
                             <div class="form-group">
                               <label class="col-sm-2 control-label no-padding-right" for="">分享量</label>
                             <div class="col-sm-4">
-                              <input class="form-control" type="number" name="share" placeholder="请输入分享量">
+                              <input class="form-control" type="number" name="share" value="{$re.share}" placeholder="请输入分享量">
                             </div>
                               <label class="col-sm-2 control-label no-padding-right" for="">浏览量</label>
                             <div class="col-sm-4">
-                              <input class="form-control" type="number" name="browse" placeholder="请输入浏览量">
+                              <input class="form-control" type="number" name="browse" value="{$re.browse}" placeholder="请输入浏览量">
                             </div>
                             </div>
 
-
-                          <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">地址</label>
-                              <div class="col-sm-10">
-                                <input class="form-control" type="text" name="addr" id="addr" placeholder="请输入地址" >
-                              </div>
-                              
-                            </div>
 
                             <div class="form-group">
-                              <label class="col-sm-2 control-label no-padding-right" for="">经度</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="number" name="longs" id="longs" placeholder="请输入经度">
+                              <label class="col-sm-2 control-label no-padding-right" for="">地址</label>
+                              <div class="col-sm-10">
+                                <input class="form-control" type="text" name="addr" value="{$re.addr}" id="addr" required >
+                              </div>
                             </div>
-                              <label class="col-sm-2 control-label no-padding-right" for="">纬度</label>
-                            <div class="col-sm-4">
-                              <input class="form-control" type="number" name="lats" id="lats" placeholder="请输入纬度">
-                            </div>
-                            </div>
+  
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label no-padding-right" for="">经度</label>
+                                <div class="col-sm-4">
+                                  <input class="form-control" type="text" name="longs" value="{$re.longs}" id="longs" required>
+                                </div>
+                                <label class="col-sm-2 control-label no-padding-right" for="">纬度</label>
+                                <div class="col-sm-4">
+                                  <input class="form-control" type="text" name="lats" value="{$re.lats}" id="lats" required>
+                                </div>
+                              </div>
 
                             <div class="form-group">
                               <label class="col-sm-2 control-label no-padding-right" for="">营业时间</label>
                               <div class="col-sm-10">
-                                <input class="form-control" type="text" name="time" placeholder="请输入营业时间" >
+                                <input class="form-control" type="text" name="time" value="{$re.time}" placeholder="请输入营业时间" >
                               </div>
                               
                             </div>
@@ -134,11 +135,11 @@
                             <div class="form-group">
                               <label class="col-sm-2 control-label no-padding-right" for="">手机号码</label>
                             <div class="col-sm-4">
-                              <input class="form-control" type="number" name="phone" placeholder="用于商户后台登录账号" required>
+                              <input class="form-control" type="number" name="phone" value="{$re.phone}" readonly  required placeholder="用于商户后台登录账号">
                             </div>
                               <label class="col-sm-2 control-label no-padding-right" for="">登录密码</label>
                             <div class="col-sm-4">
-                              <input class="form-control" type="text" name="pwd" value="123456" required>
+                              <input class="form-control" type="text" name="pwd" value="{$re.pwd}" required>
                             </div>
                             </div>
                           
@@ -150,7 +151,7 @@
                                <div  class="col-sm-3">
                                <div class="checkbox">
                                   <label>
-                                    <input  class="ace ace-checkbox-2" type="checkbox" name="severs[]" value="{$vs.id}">
+                                    <input  class="ace ace-checkbox-2" type="checkbox"  {if condition="in_array($vs.id,$severs)"}checked{/if} name="severs[]" value="{$vs.id}">
                                     <span class="lbl"> {$vs.sever_name}</span>
                                   </label>
                                 </div>
@@ -178,12 +179,14 @@
                           <div class="form-group">
                             <div class="col-xs-12">
                               <input multiple="" type="file" id="thumb" name="logo" />
+                              <img src="{$re.logo}"  class="img-responsive" />
                             </div>
                           </div>
 
                           <div class="form-group">
                               <div class="col-xs-12">
                                 <input multiple="" type="file" id="thumbs" name="wx" />
+                                <img src="{$re.wx}"  class="img-responsive" />
                               </div>
                             </div>
                    
@@ -204,7 +207,7 @@
                 简介   
                 <script src="__ADMIN__/assets/js/ueditor.config.js" type="text/javascript"></script>
                 <script src="__ADMIN__/assets/js/ueditor.all.js" type="text/javascript"></script>
-                    <textarea id="myEditor" name="content" style="width:100%;"></textarea>
+                    <textarea id="myEditor" name="content" style="width:100%;">{$re.content}</textarea>
                     <script type="text/javascript">
                       var editor = new UE.ui.Editor({
                         initialFrameHeight: 300
@@ -218,7 +221,7 @@
                 </div>
                 <div class="clearfix form-actions">
                   <div class="col-md-offset-3 col-md-9">
-                   
+                    <input name="id" type="hidden" value="{$re.id}" />
                     <button class="btn btn-info" type="submit">
                       <i class="ace-icon fa fa-floppy-o bigger-110"></i>
                       保存
@@ -288,7 +291,6 @@
     })
 
  })
-
  $("#addr").change(function(){
    var addr = $("#addr").val();
  
@@ -312,7 +314,6 @@
     })
 
  })
-
 </script>
 
 
