--- a/application/admin/view/shop/add.html
+++ b/application/admin/view/shop/add.html
@@ -115,11 +115,11 @@
                             <div class="form-group">
                               <label class="col-sm-2 control-label no-padding-right" for="">经度</label>
                             <div class="col-sm-4">
-                              <input class="form-control" type="number" name="longs" id="longs" placeholder="请输入经度">
+                              <input class="form-control" type="text" name="longs" id="longs" placeholder="请输入经度">
                             </div>
                               <label class="col-sm-2 control-label no-padding-right" for="">纬度</label>
                             <div class="col-sm-4">
-                              <input class="form-control" type="number" name="lats" id="lats" placeholder="请输入纬度">
+                              <input class="form-control" type="text" name="lats" id="lats" placeholder="请输入纬度">
                             </div>
                             </div>
 
